# sprog

./: .gitignore  README.md  meson.build  pyproject.toml
.github/workflows/: pythonpackage.yml
docs/: conf.py  index.rst  requirements.txt
docs/source/: conf.py  index.rst
src/: sprog.pyx
src/sprog/: aggregate.py  extension.py  function.py  mps.py  sparse.py
tests/: __init__.py  test_allocation.py  test_baker.py  test_basics.py  test_mps.py  test_sparse_dot_mkl.py
tests/resources/: Harbor_Long-Short_Equity_ETF_holdings_20241022.csv  __init__.py  nasdaq_screener_1729696921350.csv
