[project]
name = "sprog"
version = "0.1.0"
description = "Sparse linear algebra for linear programming"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
dependencies = [
    "ruff>=0.6.8",
    "Cython",
    "numpy>=2.1.2",
    "scipy>=1.14.1",
]

[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]
