[project]
name = "sprog"
version = "0.1.0"
description = "Sparse linear algebra for linear programming"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
dependencies = [
    "numpy>=2.1.2",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "sparse-dot-mkl>=0.9.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--doctest-modules"]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["src/sprog"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]
