[project]
name = "sprog"
version = "0.2.0"
description = "Sparse linear algebra for linear programming"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
dependencies = [
    "numpy>=2.1.2",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "sparse-dot-mkl>=0.9.6",
    "mkl-devel>=2024.2.2",
]

[project.urls]
Documentation = "https://sprog.rtfd.io/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D211", "D213", "ISC001", "PLR0913", "RUF002", "RUF100"]
mccabe.max-complexity = 13

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "--doctest-modules",
    "--cov=sprog",
    "--cov-report=xml",
    "--memray",
    "--junitxml=junit.xml",
    "-o",
    "junit_family=legacy"
]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["src/sprog"]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pandas-stubs>=2.2.3.250527",
    "pytest-cov>=5.0.0",
    "pytest-github-report>=0.0.1",
    "pytest-memray>=1.7.0",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
    "scipy-stubs>=1.15.3.0",
    "sphinx-material>=0.0.36",
    "sphinx>=8.1.3",
    "twine>=5.1.1",
]

[tool.mypy]
enable_error_code = ["ignore-without-code"]
exclude = ["^.venv/"]

[tool.coverage.run]
core = "sysmon"

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
]
